k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green  
spec:
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: kubedevio/nginx-color:green
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    app: green
  ports:
  - port: 80
    targetPort: 80
