k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path    
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: blue-service
      port:
        number: 80
  rules:
    - host: fabiocaetanodev.com.br
      http:
        paths:
          - path: /blue
            pathType: Prefix                            
            backend:
              service:
                name: blue-service
                port:
                  number: 80           
          - path: /green
            pathType: Prefix                            
            backend:
              service:
                name: green-service
                port:
                  number: 80
    - host: blue.fabiocaetanodev.com.br
      http:
        paths:
          - path: /
            pathType: Prefix                            
            backend:
              service:
                name: blue-service
                port:
                  number: 80
    - host: green.fabiocaetanodev.com.br
      http:
        paths:
          - path: /
            pathType: Prefix                            
            backend:
              service:
                name: green-service
                port:
                  number: 80
